--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "ef4c9f49-f2b1-4b2b-b348-8b98c9f07dd7"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
