--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "@angular/platform-browser": "~11.2.8",
     "@angular/platform-browser-dynamic": "~11.2.8",
     "@angular/router": "~11.2.8",
+    "@aspnet/signalr": "^1.0.27",
+    "@microsoft/signalr": "^6.0.3",
+    "@ssv/signalr-client": "^3.0.0-dev221",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
